# llm-evidence-summarizer

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  system_architecture.drawio
scripts/: run_cli.py
summarizer/: backends.py  pipeline.py
summarizer/prompts/: abstract.txt  extract.txt
tests/fixtures/: sample_policy.txt
